--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
-    "@supabase/supabase-js": "^2.49.8",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/supabase-js": "^2.50.0",
     "@tanstack/react-query": "^5.76.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "lucide-react": "^0.511.0",
     "mapbox-gl": "^3.12.0",
@@ -26,6 +29,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
+    "react-intersection-observer": "^9.16.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.20"
